--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -1,1 +1,139 @@
-[]
+{
+    "dashboard": {
+        "totalClients": "Clients au total",
+        "newClients": "Nouveaux clients",
+        "totalEmployees": "Employés au total",
+        "totalProjects": "Projets au total",
+        "newProjects": "Nouveaux projets",
+        "totalPaidInvoices": "Factures payées",
+        "totalTickets": "Tickets au total",
+        "totalOpenTickets": "Tickets ouverts au total",
+        "openTickets": "Tickets ouverts",
+        "totalHoursLogged": "Heures enregistrées au total",
+        "totalPendingTasks": "Tâches en attente au total",
+        "totalCompletedTasks": "Tâches terminées au total",
+        "totalPendingIssues": "Problèmes en attente au total",
+        "totalPaidAmount": "Montant payé au total",
+        "totalOutstandingAmount": "Montant impayé",
+        "recentEarnings": "Gains récents",
+        "overdueTasks": "Tâches en retard",
+        "pendingClientIssues": "Problèmes en attente du client",
+        "projectActivityTimeline": "Chronologie de l'activité des projets",
+        "userActivityTimeline": "Chronologie de l'activité de l'utilisateur",
+        "dueDate": "Date d'échéance",
+        "weatherSetLocation": "Définir l'emplacement actuel pour voir la météo",
+        "totalTodayAttendance": "Présence aujourd'hui",
+        "newTickets": "Nouveaux tickets",
+        "totalUnpaidInvoices": "Factures impayées",
+        "followUpDate": "Date de suivi",
+        "pendingFollowUp": "Suivi en attente",
+        "totalLeads": "Leads au total",
+        "newLead": "Nouveaux leads",
+        "newproduct": "Nouveau produit",
+        "totalConvertedClient": "Clients convertis au total",
+        "totalPendingFollowUps": "Suivis en attente au total",
+        "nextFollowUp": "Prochain suivi",
+        "holidayCheck": "Aujourd'hui est un jour férié pour",
+        "totalArchiveProjects": "Projets archivés au total",
+        "freeEmployees": "Non affectés à un projet",
+        "dashboardWidgets": "Widgets du tableau de bord",
+        "totalResolvedTickets": "Tickets résolus au total",
+        "totalUnresolvedTickets": "Tickets non résolus au total",
+        "clientFeedback": "Avis des clients",
+        "settingsLeaves": "Calendrier des congés",
+        "totalActiveClients": "Clients actifs au total",
+        "totalContractsSigned": "Contrats signés au total",
+        "totalContractsGenerated": "Contrats générés au total",
+        "totalLeadConversions": "Conversions de leads au total",
+        "latestClient": "Derniers clients",
+        "recentLoginActivities": "Activités de connexion récentes",
+        "clientWiseEarnings": "Gains par client",
+        "clientWiseTimelogs": "Timelogs par client",
+        "leadVsStatus": "Nombre de leads par statut",
+        "leadVsSource": "Nombre de leads par source",
+        "totalExpenses": "Dépenses au total",
+        "totalEarnings": "Gains au total",
+        "totalProfit": "Bénéfices au total",
+        "totalPendingAmount": "Montant en attente au total",
+        "earningsByClient": "Gains par client",
+        "earningsByProjects": "Gains par projets",
+        "lastReceivedPayments": "Derniers paiements reçus",
+        "invoiceTab": "Onglet Factures",
+        "estimateTab": "Onglet Devis",
+        "expenseTab": "Onglet Dépenses",
+        "paymentTab": "Onglet Paiements",
+        "duePaymentsTab": "Onglet Paiements en attente",
+        "proposalTab": "Onglet Propositions",
+        "invoiceOverview": "Aperçu des factures",
+        "invoiceDraft": "Brouillon",
+        "invoiceNotSent": "Non envoyées",
+        "invoiceUnpaid": "Impayées",
+        "invoicePartiallyPaid": "Partiellement payées",
+        "invoiceOverdue": "En retard",
+        "invoicePaid": "Payées",
+        "estimateOverview": "Aperçu des devis",
+        "estimateDraft": "Brouillon",
+        "estimateNotSent": "Non envoyés",
+        "estimateSent": "Envoyés",
+        "estimateExpired": "Expirés",
+        "estimateDeclined": "Refusés",
+        "estimateAccepted": "Acceptés",
+        "proposalOverview": "Aperçu des propositions",
+        "proposalWaiting": "En attente",
+        "proposalConverted": "Convertis",
+        "proposalDeclined": "Refusés",
+        "proposalAccepted": "Acceptés",
+        "proposalExpired": "Expirés",
+        "totalLeavesApproved": "Congés approuvés",
+        "totalNewEmployee": "Nouveaux employés",
+        "totalEmployeeExits": "Départs d'employés",
+        "departmentWiseEmployee": "Employés par département",
+        "designationWiseEmployee": "Employés par poste",
+        "genderWiseEmployee": "Employés par genre",
+        "roleWiseEmployee": "Employés par rôle",
+        "averageAttendance": "Présence moyenne",
+        "leavesTaken": "Congés pris",
+        "lateAttendanceMark": "Marque de présence tardive",
+        "lateMark": "Marque de retard",
+        "totalProject": "Projets au total",
+        "totalOverdueProject": "Projets en retard au total",
+        "statusWiseProject": "Projets par statut",
+        "pendingMilestone": "Étapes en attente",
+        "totalUnassignedTicket": "Tickets non attribués au total",
+        "typeWiseTicket": "Tickets par type",
+        "statusWiseTicket": "Tickets par statut",
+        "channelWiseTicket": "Tickets par canal",
+        "thisMonth": "Ce mois-ci",
+        "timelogs": "Timelogs",
+        "privateTaskInfo": "Les tâches privées ne sont pas incluses",
+        "verificationPending": "Vérification du compte en attente",
+        "verificationPendingInfo": "La vérification de votre compte est en attente par le propriétaire.",
+        "birthday": "Anniversaires",
+        "inDays": "dans :days jours",
+        "inDay": "dans :days jour",
+        "profile": "Profil",
+        "shiftSchedule": "Planning des shifts",
+        "notices": "Avis",
+        "tasks": "Tâches",
+        "projects": "Projets",
+        "myTask": "Mes tâches",
+        "myCalender": "Mon calendrier",
+        "weekTimelog": "Timelogs de la semaine",
+        "lead": "Leads",
+        "leave": "En congé aujourd'hui",
+        "workFromHome": "En télétravail aujourd'hui",
+        "fullDay": "Journée complète",
+        "headcount": "Effectif",
+        "appreciation": "Reconnaissances",
+        "joiningVsAttrition": "Entrées vs Attrition",
+        "workAnniversary": "Anniversaires au travail",
+        "joinedToday": "Ont rejoint aujourd'hui",
+        "ticket": "Tickets",
+        "noticePeriodDuration": "Durée du préavis",
+        "probationDate": "Date de la période d'essai",
+        "internshipDate": "Date de stage",
+        "contractDate": "Date de contrat",
+        "dashboardWidgetsSettings": "Paramètres des widgets du tableau de bord",
+        "addNewproduct": "Ajouter un nouveau produit"
+    }
+}
