--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -1,4 +1,8 @@
 {
-"Total Producteurs":"Total Producteurs",
-"Total Section":"Total Section"
+    "Total Producteurs": "Total Producteurs",
+    "Total Section": "Total Section",
+    "Total Superficie Parcelles": "Total Superficie Parcelles",
+    "Total Arbres distribues": "Total Arbres distribués",
+    "Total Inspection": "Total Inspection",
+
 }
