--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -4,5 +4,17 @@
     "Total Superficie Parcelles": "Total Superficie Parcelles",
     "Total Arbres distribues": "Total Arbres distribués",
     "Total Inspection": "Total Inspection",
-
+    "Recherche par Mot(s) cle(s)": "Recherche par Mot(s) clé(s)",
+    "Localite": "Localité",
+    "Toutes": "Toutes",
+    "Programme": "Programme",
+    "Tous": "Tous",
+    "Etat certification": "Etat certification",
+    "Statut": "Statut",
+    "Date": "Date",
+    "Filter": "Filtrer",
+    "TOTAL PRODUCTEURS": "TOTAL PRODUCTEURS",
+    "HOMMES": "HOMMES",
+    "FEMMES": "FEMMES",
+    "CERTIFIES": "CERTIFIES"
 }
