--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -16,5 +16,28 @@
     "TOTAL PRODUCTEURS": "TOTAL PRODUCTEURS",
     "HOMMES": "HOMMES",
     "FEMMES": "FEMMES",
-    "CERTIFIES": "CERTIFIES"
+    "CERTIFIES": "CERTIFIES",
+    "CANDIDATS": "CANDIDATS",
+    "CANDIDAT": "CANDIDAT",
+    "Section": "Section",
+    "Nom": "Nom",
+    "Prenoms": "Prénoms",
+    "Prenom": "Prénom",
+    "Code Producteur": "Code Producteur",
+    "Sexe": "Sexe",
+    "Nationalite": "Nationalité",
+    "Telephone": "Téléphone",
+    "Ajoutée le": "Ajoutée le",
+    "Status": "Statut",
+    "Action": "Action",
+    "Importer des producteurs": "Importer des producteurs",
+    "producteur-import-exemple.xlsx": "producteur-import-exemple.xlsx",
+    "Importer des Mises à jour de producteurs": "Importer des Mises à jour de producteurs",
+    "Ajouter nouveau": "Ajouter nouveau",
+    "Importation": "Importation",
+    "Importer des Producteurs": "Importer des Producteurs",
+    "Importer Mise à jour des Producteurs": "Importer Mise à jour des Producteurs",
+    "Exportation": "Exportation",
+    "Uniquement liste Producteurs": "Uniquement liste Producteurs",
+    "Tous les Producteurs avec autres Infos": "Tous les Producteurs avec autres Infos"
 }
