--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -39,5 +39,53 @@
     "Importer Mise à jour des Producteurs": "Importer Mise à jour des Producteurs",
     "Exportation": "Exportation",
     "Uniquement liste Producteurs": "Uniquement liste Producteurs",
-    "Tous les Producteurs avec autres Infos": "Tous les Producteurs avec autres Infos"
+    "Tous les Producteurs avec autres Infos": "Tous les Producteurs avec autres Infos",
+    "image": "image",
+    "Tableau de bord": "Tableau de bord",
+    "Gestion des Staffs": "Gestion des Staffs",
+    "Gestion des Exploitations": "Gestion des Exploitations",
+    "Producteurs": "Producteurs",
+    "Identifications Parcelles": "Identifications Parcelles",
+    "Estimations": "Estimations",
+    "Gestion Suivi Productivité": "Gestion Suivi Productivité",
+    "Suivis Parcelles": "Suivis Parcelles",
+    "Formations": "Formations",
+    "Inspections": "Inspections",
+    "Applications Phytos": "Applications Phytos",
+    "Gestion de la Traçabilité": "Gestion de la Traçabilité",
+    "Stock Magasins de Section": "Stock Magasins de Section",
+    "Livraison Magasins Centraux": "Livraison Magasins Centraux",
+    "Connaissement Usine": "Connaissement Usine",
+    "Prime aux Producteurs": "Prime aux Producteurs",
+    "SSRTE": "SSRTE",
+    "SSRTE-CLMRS": "SSRTE-CLMRS",
+    "Enquete Menage": "Enquête Ménage",
+    "Agroforesterie": "Agroforesterie",
+    "Evaluation des besoins": "Evaluation des besoins",
+    "Approvisionnement": "Approvisionnement",
+    "Suivi distribution": "Suivi distribution",
+    "Evaluation Post-Planting": "Evaluation Post-Planting",
+    "Risques de Déforestation": "Risques de Déforestation",
+    "Gouvernance Amelioree": "Gouvernance Améliorée",
+    "Presentation de la cooperative": "Présentation de la coopérative",
+    "Tous les employes": "Tous les employés",
+    "Presences": "Présences",
+    "Presence": "Présence",
+    "Conges": "Congés",
+    "Conge": "Congé",
+    "Formations Staffs": "Formations Staffs",
+    "Formation Staff": "Formation Staff",
+    "Archivages": "Archivages",
+    "Archivage": "Archivage",
+    "Communaute resiliente": "Communauté résiliente",
+    "Communautes Resilientes": "Communautés Résilientes",
+    "Actions Sociales": "Actions Sociales",
+    "Action Sociale": "Action Sociale",
+    "Activites Communautaires": "Activités Communautaires",
+    "Activite Communautaire": "Activité Communautaire",
+    "Support Ticket": "Support Ticket",
+    "Support Tickets": "Support Tickets",
+    "Parametres": "Paramètres",
+    "Parametre": "Paramètre"
+
 }
