--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -86,6 +86,29 @@
     "Support Ticket": "Support Ticket",
     "Support Tickets": "Support Tickets",
     "Parametres": "Paramètres",
-    "Parametre": "Paramètre"
+    "Parametre": "Paramètre",
+    "Producteur": "Producteur",
+    "Statut declaration": "Statut déclaration",
+    "Date de debut - Date de fin": "Date de début - Date de fin",
+    "TOTAL PARCELLES": "TOTAL PARCELLES",
+    "TOTAL GPS": "TOTAL GPS",
+    "TOTAL VERBALES": "TOTAL VERBALES",
+    "Code Parcelle": "Code Parcelle",
+    "Superficie": "Superficie",
+    "Annee de creation": "Année de création",
+    "Etat": "Etat",
+    "Editer": "Editer",
+    "Active": "Activé",
+    "Désactive": "Désactivé",
+    "Supprimer": "Supprimer",
+    "Importer des parcelles": "Importer des parcelles",
+    "Envoyer": "Envoyer",
+    "Importer des Parcelles": "Importer des Parcelles",
+    "Importer un Fichier KML": "Importer un Fichier KML",
+    "Exporter en Excel": "Exporter en Excel",
+    "Waypoints": "Waypoints",
+    "Polygones": "Polygones",
+    "Voir Mapping": "Voir Mapping",
+
 
 }
