--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -108,7 +108,7 @@
     "Exporter en Excel": "Exporter en Excel",
     "Waypoints": "Waypoints",
     "Polygones": "Polygones",
-    "Voir Mapping": "Voir Mapping",
+    "Voir Mapping": "Voir Mapping"
 
 
 }
