--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -121,5 +121,5 @@
     "Importer des estimations": "Importer des estimations",
     "Fichier d'exemple à utiliser": "Fichier d'exemple à utiliser",
     "estimation-import-exemple.xlsx": "estimation-import-exemple.xlsx",
-    "Importer des Estimations": "Importer des Estimations",
+    "Importer des Estimations": "Importer des Estimations"
 }
