--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -145,6 +145,9 @@
     "Date approbation": "Date d'approbation",
     "Approuve": "Approuvé",
     "Non approuve": "Non approuvé",
-    "Exclu": "Exclu"
+    "Exclu": "Exclu",
+    "Date application": "Date d'application",
+    "Fichier exemple à utiliser": "Fichier d'exemple à utiliser",
+    "Importation Phyto": "Importation Phyto"
 
 }
