--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -148,6 +148,43 @@
     "Exclu": "Exclu",
     "Date application": "Date d'application",
     "Fichier exemple à utiliser": "Fichier d'exemple à utiliser",
-    "Importation Phyto": "Importation Phyto"
+    "Importation Phyto": "Importation Phyto",
+    "Magasin de Section": "Magasin de Section",
+    "Magasins de Section": "Magasins de Section",
+    "Campagne": "Campagne",
+    "Campagnes": "Campagnes",
+    "Periode": "Période",
+    "Stock entrant": "Stock entrant",
+    "Stock sortant": "Stock sortant",
+    "Date de livraison": "Date de livraison",
+    "Détails livraisons": "Détails livraisons",
+    "Enregistrement Achat Cacao brousse": "Enregistrement Achat Cacao brousse",
+    "Enregistrer Connaissement brousse vers Magasin Central": "Enregistrer Connaissement brousse vers Magasin Central",
+    "Magasin Section": "Magasin Section",
+    "Magasin Central": "Magasin Central",
+    "Transporteur": "Transporteur",
+    "Vehicule": "Véhicule",
+    "Type Produit": "Type Produit",
+    "Confirmer la reception": "Confirmer la réception",
+    "Confirmer": "Confirmer",
+    "Enregistrer un Connaissement vers Usine": "Enregistrer un Connaissement vers Usine",
+    "Quantité chargée(Kg)": "Quantité chargée(Kg)",
+    "Nombre Sacs": "Nombre Sacs",
+    "Quantité receptionnée(Kg)": "Quantité réceptionnée(Kg)",
+    "En attente de reception": "En attente de réception",
+    "Receptionnée": "Réceptionnée",
+    "Refoulée": "Refoulée",
+    "Suivre cette livraison": "Suivre cette livraison",
+    "Refouler cette livraison": "Refouler cette livraison",
+    "Etre-vous sûr de vouloir confirmer la reception de cette livraison?": "Etre-vous sûr de vouloir confirmer la réception de cette livraison?",
+    "Confirmation de refoulement": "Confirmation de refoulement",
+    "Etre-vous sûr de vouloir confirmer le refoulement de cette livraison?": "Etre-vous sûr de vouloir confirmer le refoulement de cette livraison?",
+    "Quantite": "Quantité",
+    "Montant": "Montant",
+    "Impaye": "Impayé",
+    "Payé": "Payé",
+    "Confirmer le paiement": "Confirmer le paiement",
+    "Confirmation de reception": "Confirmation de réception",
+    "Etre-vous sûr de vouloir confirmer le paiement de ce producteur?": "Etre-vous sûr de vouloir confirmer le paiement de ce producteur?"
 
 }
