--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -215,6 +215,47 @@
     "Type de Polygone": "Type de Polygone",
     "Parcelles Producteurs": "Parcelles Producteurs",
     "Forêts Classées": "Forêts Classées",
-    "Risque de Deforestation par Waypoints": "Risque de Déforestation par Waypoints"
-
+    "Risque de Deforestation par Waypoints": "Risque de Déforestation par Waypoints",
+    "Annee activite": "Année d'activité",
+    "Evalution des membres": "Evalution des membres",
+    "Membre-Adherent": "Membre-Adhérent",
+    "Homme": "Homme",
+    "Femme": "Femme",
+    "Hommes": "Hommes",
+    "Femmes": "Femmes",
+    "Membres Ordinaires": "Membres Ordinaires",
+    "Total": "Total",
+    "Repartition des membres par programme": "Répartition des membres par programme",
+    "Cacao": "Cacao",
+    "Cacao Production": "Cacao Production",
+    "Certifie": "Certifié",
+    "Programme Durabilite": "Programme Durabilité",
+    "Conventionnel/Ordinaire": "Conventionnel/Ordinaire",
+    "Cacao Vendu à CCB": "Cacao Vendu à CCB",
+    "Chiffre affaire": "Chiffre d'affaire",
+    "Cacao Vendu aux autres partenaires": "Cacao Vendu aux autres partenaires",
+    "Chiffre d'affaire": "Chiffre d'affaire",
+    "Departement": "Département",
+    "Designation": "Désignation",
+    "Mois": "Mois",
+    "Annee": "Année",
+    "Marquer une Présence": "Marquer une Présence",
+    "Exporter": "Exporter",
+    "Ferie": "Férié",
+    "Demi-Journee": "Demi-Journée",
+    "Tard": "Tard",
+    "Absence": "Absence",
+    "Voyage": "Voyage",
+    "Effacer": "Effacer",
+    "Entreprises": "Entreprises",
+    "Formateurs": "Formateurs",
+    "Formateur": "Formateur",
+    "Lieu": "Lieu",
+    "Date formation": "Date formation",
+    "Type Archive": "Type Archive",
+    "Document": "Document",
+    "Mise a jour": "Mise à jour",
+    "Are you sure to enable this archivage?": "Etes-vous sûr d'activer cet archivage?",
+    "Ajouter une archive": "Ajouter une archive",
+    "Titre": "Titre"
 }
