--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -274,5 +274,48 @@
     "Activer": "Activer",
     "Connexion": "Connexion",
     "Êtes-vous sûr de désactiver ce staff?": "Êtes-vous sûr de désactiver ce staff?",
-    "Êtes-vous sûr de supprimer ce staff?": "Êtes-vous sûr de supprimer ce staff?"
+    "Êtes-vous sûr de supprimer ce staff?": "Êtes-vous sûr de supprimer ce staff?",
+    "Statut juridique": "Statut juridique",
+    "SCOOPS": "SCOOPS",
+    "COOP CA": "COOP CA",
+    "Nom coop": "Nom de la cooperative",
+    "Sigle coop": "Sigle de la cooperative",
+    "Compte Contribuable": "N°Compte Contribuable",
+    "Secteur activite": "Secteur d'activité",
+    "Collecte": "Collecte",
+    "Achat vente": "Achat vente",
+    "Historique coop": "Historique de la coopérative",
+    "Mission": "Mission",
+    "Adresse Email coop": "Adresse Email de la coopérative",
+    "Vision": "Vision",
+    "Contacts": "Contacts",
+    "Adresse postale coop": "Adresse postale de la coopérative",
+    "Region": "Région",
+    "Ville": "Ville",
+    "Annee creation": "Annee creation",
+    "Code CCC": "Code CCC",
+    "Nombre de membres creation": "Nombre de membres creation",
+    "Nombre sections creation": "Nombre de sections à la creation",
+    "Nombre de membres actuel": "Nombre de membres actuel",
+    "Nombre de sections actuel": "Nombre de sections actuel",
+    "Nombre de PCA qui se sont succédés depuis la creation": "Nombre de PCA qui se sont succédés depuis la creation",
+    "Longitude": "Longitude",
+    "Latitude": "Latitude",
+    "Utilisateurs Mobile": "Utilisateurs Mobile",
+    "Utilisateurs Web": "Utilisateurs Web",
+    "Sous-prefecture": "Sous-préfecture",
+    "Importer des Sections": "Importer des Sections",
+    "Code Localite": "Code Localité",
+    "Type de localites": "Type de localités",
+    "Last Update": "Dernière mise à jour",
+    "Ajouter un Département": "Ajouter un Département",
+    "Nom du Département": "Nom du Département",
+    "Nom du poste": "Nom du poste",
+    "Etes-vous sûr de vouloir activer ce designation de formation?": "Etes-vous sûr de vouloir activer ce designation de formation?",
+    "Etes-vous sûr de vouloir désactiver ce designation de formation?": "Etes-vous sûr de vouloir désactiver ce designation de formation?",
+    "Ajouter un poste": "Ajouter un poste",
+    "Enregistrer": "Enregistrer",
+    "Adresse mail de entreprise": "Adresse mail de l'entreprise",
+    "Téléphone de entreprise": "Téléphone de l'entreprise",
+    "Adresse de entreprise": "Adresse de l'entreprise"
 }
