--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -317,5 +317,24 @@
     "Enregistrer": "Enregistrer",
     "Adresse mail de entreprise": "Adresse mail de l'entreprise",
     "Téléphone de entreprise": "Téléphone de l'entreprise",
-    "Adresse de entreprise": "Adresse de l'entreprise"
+    "Adresse de entreprise": "Adresse de l'entreprise",
+    "Poste": "Poste",
+    "Etes-vous sûr de vouloir activer ce formateur?": "Etes-vous sûr de vouloir activer ce formateur?",
+    "Etes-vous sûr de vouloir désactiver ce formateur?": "Etes-vous sûr de vouloir désactiver ce formateur?",
+    "Nom magasin": "Nom magasin",
+    "Coordonnees GPS": "Coordonnées GPS",
+    "Voir la position": "Voir la position",
+    "Nom Staff": "Nom Staff",
+    "Obtenir les coordonnees GPS": "Obtenir les coordonnées GPS",
+    "Etes-vous sûr de vouloir activer ce magasin?": "Etes-vous sûr de vouloir activer ce magasin ?",
+    "Etes-vous sûr de vouloir désactiver ce magasin?": "Etes-vous sûr de vouloir désactiver ce magasin ?",
+    "Ajouter un Magasin Central": "Ajouter un Magasin Central",
+    "Photo": "Photo",
+    "Contact 1": "Contact 1",
+    "Contact 2": "Contact 2",
+    "Etes-vous sûr de vouloir activer ce transporteur?": "Etes-vous sûr de vouloir activer ce transporteur ?",
+    "Etes-vous sûr de vouloir désactiver ce transporteur?": "Etes-vous sûr de vouloir désactiver ce transporteur ?",
+    "Choisir une entreprise": "Choisir une entreprise"
+    ""
+
 }
