--- a/core/resources/lang/fr.json
+++ b/core/resources/lang/fr.json
@@ -334,6 +334,52 @@
     "Contact 2": "Contact 2",
     "Etes-vous sûr de vouloir activer ce transporteur?": "Etes-vous sûr de vouloir activer ce transporteur ?",
     "Etes-vous sûr de vouloir désactiver ce transporteur?": "Etes-vous sûr de vouloir désactiver ce transporteur ?",
-    "Choisir une entreprise": "Choisir une entreprise"
+    "Choisir une entreprise": "Choisir une entreprise",
+    "Marque": "Marque",
+    "Matricule véhicule": "Matricule véhicule",
+    "Matricule remorque": "Matricule remorque",
+    "Etes-vous sûr de vouloir activer ce vehicule?": "Etes-vous sûr de vouloir activer ce véhicule ?",
+    "Etes-vous sûr de vouloir désactiver ce vehicule?": "Etes-vous sûr de vouloir désactiver ce véhicule ?",
+    "Ajouter un Vehicule": "Ajouter un Véhicule",
+    "Marque de Véhicule": "Marque de Véhicule",
+    "Selectionner une option": "Sélectionner une option",
+    "Etes-vous sûr de vouloir activer ce remorque?": "Etes-vous sûr de vouloir activer ce remorque ?",
+    "Etes-vous sûr de vouloir désactiver ce remorque?": "Etes-vous sûr de vouloir désactiver ce remorque ?",
+    "Ajouter une Remorque": "Ajouter une Remorque",
+    "Etes-vous sûr de vouloir activer ce travail dangereux?": "Etes-vous sûr de vouloir activer ce travail dangereux ?",
+    "Etes-vous sûr de vouloir désactiver ce travail dangereux?": "Etes-vous sûr de vouloir désactiver ce travail dangereux ?",
+    "Ajouter un travail Dangereux": "Ajouter un travail Dangereux",
+    "Etes-vous sûr de vouloir activer ce travail legers?": "Etes-vous sûr de vouloir activer ce travail legers ?",
+    "Etes-vous sûr de vouloir désactiver ce travail legers?": "Etes-vous sûr de vouloir désactiver ce travail legers ?",
+    "Ajouter un travail Legers": "Ajouter un travail Legers",
+    "Etes-vous sûr de vouloir activer?": "Etes-vous sûr de vouloir activer ?",
+    "Etes-vous sûr de vouloir désactiver?": "Etes-vous sûr de vouloir désactiver ?",
+    "Etes-vous sûr de vouloir activer ce type de formation?": "Etes-vous sûr de vouloir activer ce type de formation ?",
+    "Etes-vous sûr de vouloir désactiver ce type de formation?": "Etes-vous sûr de vouloir désactiver ce type de formation ?",
+    "Ajouter un type de Formation": "Ajouter un type de Formation",
+    "Type": "Type",
+    "Ajouter un theme de Formation": "Ajouter un thème de Formation",
+    "Type de Formation": "Type de Formation",
+    "Theme": "Thème",
+    "Etes-vous sûr de vouloir activer ce sousTheme de formation?": "Etes-vous sûr de vouloir activer ce sous-thème de formation ?",
+    "Etes-vous sûr de vouloir désactiver ce sousTheme de formation?": "Etes-vous sûr de vouloir désactiver ce sous-thème de formation ?",
+    "Ajouter un sousTheme de Formation": "Ajouter un sous-thème de Formation",
+    "Theme de Formation": "Thème de Formation",
+    "Etes-vous sûr de vouloir activer ce module de formation?": "Etes-vous sûr de vouloir activer ce module de formation ?",
+    "Etes-vous sûr de vouloir désactiver ce module de formation?": "Etes-vous sûr de vouloir désactiver ce module de formation ?",
+    "Ajouter un module de Formation": "Ajouter un module de Formation",
+    "Etes-vous sûr de vouloir activer ce theme de formation?": "Etes-vous sûr de vouloir activer ce thème de formation ?",
+    "Etes-vous sûr de vouloir désactiver ce theme de formation?": "Etes-vous sûr de vouloir désactiver ce thème de formation ?",
+    "Module de Formation": "Module de Formation",
+    "Certificat": "Certificat",
+    "Categorie": "Catégorie",
+    "Etes-vous sûr de vouloir activer cette question?": "Etes-vous sûr de vouloir activer cette question ?",
+    "Etes-vous sûr de vouloir désactiver cette question?": "Etes-vous sûr de vouloir désactiver cette question ?",
+    "Nom Scientifique": "Nom Scientifique",
+    "Strate": "Strate",
+    "Etes-vous sûr de vouloir activer cet élément?": "Etes-vous sûr de vouloir activer cet élément ?",
+    "Etes-vous sûr de vouloir désactiver cet élément?": "Etes-vous sûr de vouloir désactiver cet élément ?",
+    "Ajouter un type archive": "Ajouter un type archive"
+
 
 }
