--- a/core/resources/lang/us.json
+++ b/core/resources/lang/us.json
@@ -378,6 +378,6 @@
     "Nom Scientifique": "Scientific Name",
     "Strate": "Stratum",
     "Etes-vous sûr de vouloir activer cet élément?": "Are you sure you want to enable this element?",
-    "Etes-vous sûr de vouloir désactiver cet élément?": "Are you sure you want to disable this element?",
+    "Etes-vous sûr de vouloir désactiver cet élément": "Are you sure you want to disable this element?",
     "Ajouter un type archive": "Add an Archive Type"
 }
