--- a/core/resources/lang/us.json
+++ b/core/resources/lang/us.json
@@ -17,16 +17,16 @@
     "HOMMES": "MEN",
     "FEMMES": "WOMEN",
     "CERTIFIES": "CERTIFIED",
-    "CANDIDATS": "CANDDATES / APPLICANTS",
+    "CANDIDATS": "CANDIDATES / APPLICANTS",
     "CANDIDAT": "CANDATE",
     "Section": "Section",
     "Nom": "Name",
     "Prenoms": "Sunames",
     "Prenom": "Suname",
     "Code Produeur": "Farmer Code",
-    "Sexe": "Sex",
-    "Nationalit": "Nationality",
-    "Téléphon": "Telephone",
+    "Sexe": "Sexe",
+    "Nationalite": "Nationality",
+    "Téléphone": "Telephone",
     "Ajoutée": "Added On",
     "Status": "Status",
     "Action: ": "Action ",
@@ -45,13 +45,13 @@
     "Gestion des Staffs": "Staff Management",
     "Gestion des Exploitations": "Farm Management",
     "Producteurs": "Farmers",
-    "Identifications Parcelles": "Plot Identifications",
+    "Identifications Parcelles": "Farm Identifications",
     "Estimations": "Estimates",
     "Gestion Suivi Productivité": "Productivity Monitoring Management",
-    "Suivis Parcelles": "Plots Monitoring",
+    "Suivis Parcelles": "Farms Monitoring",
     "Formations": "Trainings",
     "Inspections": "Inspections",
-    "Applications Phytos": "Phyto Applications",
+    "Applications Phytos": "agrochemicals Applications",
     "Gestion de la Traçabilité": "Traceability Management",
     "Stock Magasins de Section": "Section Stores Stock",
     "Livraison Magasins Centraux": "Central Stores Delivery",
@@ -63,7 +63,7 @@
     "Agroforesterie": "Agroforestry",
     "Evaluation des besoins": "Needs Assessment",
     "Approvisionnement": "Sourcing",
-    "Suivi distribution": "Distribution Monitoring",
+    "Suivi distribution": "Distribution follow up",
     "Evaluation Post-Planting": "Post-Planting Evaluation",
     "Risques de Déforestation": "Deforestation Risk",
     "Gouvernance Amelioree": "Improved Governance",
@@ -158,7 +158,7 @@
     "Stock sortant": "Outgoing Stock",
     "Date de livraison": "Delivery Date",
     "Détails livraisons": "Delivery Details",
-    "Enregistrement Achat Cacao brousse": "Recording Cocoa Bush Purchase",
+    "Enregistrement Achat Cacao brousse": "Recording  farm gate cocoa  Purchase",
     "Enregistrer Connaissement brousse vers Magasin Central": "Record Bush Bill of Lading to Central Store",
     "Magasin Section": "Section Store",
     "Magasin Central": "Central Store",
@@ -378,6 +378,13 @@
     "Nom Scientifique": "Scientific Name",
     "Strate": "Stratum",
     "Etes-vous sûr de vouloir activer cet élément?": "Are you sure you want to enable this element?",
-    "Etes-vous sûr de vouloir désactiver cet élément": "Are you sure you want to disable this element?",
-    "Ajouter un type archive": "Add an Archive Type"
+    "Etes-vous sûr de vouloir désactiver cet élément?": "Are you sure you want to disable this element?",
+    "Ajouter un type archive": "Add an Archive Type",
+    "Ajouter nouveau": "Add New",
+    "Tous les Staff": "All Staffs",
+    "Ajoutée le": "Added on",
+    "Candidat": "Candidate",
+    "Code Producteur": "Farmer Code",
+    "Verbale": "Verbal",
+    "GPS": "GPS"
 }
